force-app/main/default/objects/PRM_SAVOSetting__mdt/PRM_SAVOSetting__mdt.object-meta.xml
<CustomObject>
    <description>Using to store SAVO settings.</description>
    <label>PRM SAVO Setting</label>
    <pluralLabel>PRM SAVO Settings</pluralLabel>
</CustomObject>