force-app/main/default/objects/PRM_SAVOSetting__mdt/fields/PRM_ApplicationKey__c.field-meta.xml
<CustomField>
    <fullName>PRM_ApplicationKey__c</fullName>
    <description>The application key</description>
    <label>Application Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>