force-app/main/default/objects/PRM_SAVOSetting__mdt/fields/PRM_ContentLibraries__c.field-meta.xml
<CustomField>
    <fullName>PRM_ContentLibraries__c</fullName>
    <description>The content libraries associated with the content</description>
    <label>Content Libraries</label>
    <length>250</length>
    <type>Text</type>
</CustomField>