force-app/main/default/objects/PRM_SAVOSetting__mdt/fields/PRM_Password__c.field-meta.xml
<CustomField>
    <fullName>PRM_Password__c</fullName>
    <description>Password needed to access the SAVO libraries.</description>
    <label>Password</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>