force-app/main/default/objects/PRM_SAVOSetting__mdt/fields/PRM_SAVOLibraries__c.field-meta.xml
<CustomField>
    <fullName>PRM_SAVOLibraries__c</fullName>
    <description>PRM-All Partners Library;PRM-DM Library;PRM-RIM Libray</description>
    <label>SAVO Libraries</label>
    <length>250</length>
    <type>Text</type>
</CustomField>