force-app/main/default/objects/PRM_SAVOSetting__mdt/fields/PRM_Username__c.field-meta.xml
<CustomField>
    <fullName>PRM_Username__c</fullName>
    <description>The Username used to access SAVO</description>
    <label>Username</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>